--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://atlas_db_user:HLogUF8zEjnT3OKZ@cluster0.ghngg63.mongodb.net/recipe-planner?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
